--- a/souldust.html
+++ b/souldust.html
@@ -31,10 +31,10 @@
             <div>
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
-                    <h4 class="project-details">Product Owner</h4>
+                    <h4 class="project-details">Project Manager</h4>
                     <h4 class="project-details">Creative Director</h4>
                     <h4 class="project-details">Market Analysis and Research</h4>
-                    <h4 class="project-details">Market Strategy</h4>
+                    <h4 class="project-details">Market Strategist</h4>
                 </div>
             </div>
             <div>
@@ -44,10 +44,10 @@
         </div>
         <div>
             <div class="project-summary-box">
-                <p class="project-summary mauve200">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam nec venenatis tellus. Nulla eget ex in justo sagittis lacinia sit amet ac ligula. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Duis non justo sit amet sem mattis porta a id erat. Pellentesque libero odio, varius quis pharetra quis, tempus sit amet dolor. Fusce convallis consectetur lectus quis aliquet. Proin auctor arcu vel facilisis porta. Proin ultrices magna vehicula libero venenatis, ac finibus nisi sodales. Mauris porta luctus risus at pharetra. Aliquam velit augue, sollicitudin nec bibendum quis, luctus id augue.</p>
-                <p class="project-summary mauve200">Mauris pharetra ligula iaculis velit varius scelerisque. Vivamus pretium sapien nec quam auctor elementum. Nam tristique accumsan eros, at faucibus magna efficitur sit amet. Cras condimentum accumsan tellus, nec laoreet est lobortis vel. Maecenas aliquam sapien vel elit vestibulum pulvinar. Cras laoreet turpis odio, sed aliquam enim euismod eu. Etiam vestibulum ante nec leo interdum sagittis. Mauris non sodales orci. Nunc tincidunt gravida erat in dignissim.</p>
-                <p class="project-summary mauve200">Curabitur quis erat finibus, finibus lectus quis, laoreet magna. Phasellus vestibulum mauris sit amet nulla euismod lacinia non in tortor. Etiam ultricies arcu vel nisi molestie fringilla. Integer varius efficitur scelerisque. Suspendisse eu sodales quam. Aliquam scelerisque lobortis ultricies. Fusce vitae nibh ac dui interdum faucibus interdum vitae libero. Curabitur a varius turpis, vel rhoncus massa.</p>
-                <p class="project-summary mauve200">Nam vitae lectus convallis, aliquam lectus eget, consequat odio. Duis maximus lobortis fringilla. Proin tellus libero, elementum vitae efficitur at, placerat sed sapien. Curabitur bibendum risus in lorem consectetur varius. Phasellus iaculis tellus vitae aliquet condimentum. Nam condimentum vitae purus sit amet sodales. Suspendisse malesuada quis neque at tristique. Integer molestie lorem quis lorem fermentum vehicula. Nunc venenatis, metus id facilisis viverra, est tortor finibus ante, vel lacinia nisl elit sed diam. In lacinia, ante sit amet congue congue, eros dui luctus orci, et elementum nulla nibh in diam.</p>
+                <p class="project-summary mauve200">Souldust is a Malaysian streetwear brand that aims to help the young express their inner emotions as mental health grows more prevalent in the aging world. Fashion has always been used as a mode of self-expression even to as far as <span class="italic">to create an individual and separate identity from their elders.</span> (Bovone, 2006) It is representation of one’s perception of themselves and Souldust acts to be a part of that expression. The brand prioritises comfort with the Malaysian weather appropriate material and high quality prints.</p>
+                <p class="project-summary mauve200">The experimental project was launched to gauge the market for the meaningful design for streetwear in Malaysia as Souldust is the resulting product of multiple case studies and a thesis paper. The brand utilises a style that is fun and descriptive of mental health in a witty way, with its colourful, humorous and almost ironic depictions of mental health issues.</p>
+                <p class="project-summary mauve200">The project started out as a research project studying the unique characteristics of urban streetwear (and its relevance to the Malaysian market) whereby multiple case studies, surveys and other modes of research were conducted to support the study. We found that there was a prominent market for the street fashion industry in Malaysia and after countless fabric surveys, print sourcing, working out logistical technicalities, market strategising and brand building, Souldust was launched. Although our team was small, it was a successful launch with all products selling out within the month of our launch.</p>
+                <p class="project-summary mauve200">Reference. Bovone, L. (2006). Urban style cultures and urban cultural production in Milan: Postmodern identity and the transformation of fashion. <span class="italic">Poetics (Amsterdam),</span> 34(6), 370-382. https://doi.org/10.1016/j.poetic.2006.10.004</p>
             </div>
         </div>
     </div>
