--- a/vort3x.html
+++ b/vort3x.html
@@ -16,9 +16,9 @@
 
     <!-- Navbar -->
     <div id="navbar-bar">
-        <a href="index.html"><img id="navbar-logo" src="css/img/z.svg"/></a>
-        <a href="index.html#bodybox-works" class="navbar-item glow-small">Work</a>
-        <a href="gallery.html" class="navbar-item glow-small">Gallery</a>
+        <a href="./"><img id="navbar-logo" src="css/img/z.svg"/></a>
+        <a href="./#bodybox-works" class="navbar-item glow-small">Work</a>
+        <a href="gallery" class="navbar-item glow-small">Gallery</a>
     </div>
 
     <!-- Project Details -->
@@ -68,7 +68,7 @@
 
     <div id="next-project-background">
         <!-- Next Project -->
-        <a href="aurigami-mascot.html">
+        <a href="aurigami-mascot">
             <div  id="next-project-box">
                 <div>
                     <p class="font-size-14 letter-spacing-250">CLICK HERE TO VIEW</p>
