--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
     <!-- Navbar -->
     <div id="navbar-bar">
-        <a href="index.html"><img id="navbar-logo" src="css/img/z.svg"/></a>
-        <a href="index.html#bodybox-works" onClick="removeHash()" class="navbar-item glow-small">Work</a>
-        <a href="gallery.html" class="navbar-item glow-small">Gallery</a>
+        <a href="./"><img id="navbar-logo" src="css/img/z.svg"/></a>
+        <a href="./#bodybox-works" class="navbar-item glow-small">Work</a>
+        <a href="gallery" class="navbar-item glow-small">Gallery</a>
     </div>
 
     <!-- Main Headline -->
@@ -34,8 +34,8 @@
                 <p class="font-color-mauve200">“<span class="italic">Art is the conscious use of a skill and creative imagination; a skill acquired by experience, study or observation.</span>” – Merriam Webster Dictionary. Whether I am to function in a role of leadership or a cog in a wheel, I bring solutions with my knowledge and skills of art and other areas of expertise.</p>              
             </div>
             <div id="headline-buttons">
-                <a href="index.html#bodybox-works" onClick="removeHash()"><button class="btn-headline">View Works</button></a>
-                <a href="gallery.html"><button class="btn-headline">Visit Gallery</button></a>
+                <a href="./#bodybox-works" onClick="removeHash()"><button class="btn-headline">View Works</button></a>
+                <a href="gallery"><button class="btn-headline">Visit Gallery</button></a>
             </div>
         </div>
     </div>
@@ -48,13 +48,13 @@
         </div>
         
         <div class="bodybox-works-section">
-            <a href="aurigami-dapp.html">
+            <a href="aurigami-dapp">
                 <div id="thumbnail-aurigami-dapp" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI FINANCE</p>
                     <h3>Web3 DeFi App and Web2 Landing Page Design</h3>
                 </div>
             </a>
-            <a href="aurigami-brand.html">
+            <a href="aurigami-brand">
                 <div id="thumbnail-aurigami-brand" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI FINANCE</p>
                     <h3>Web3 App Brand Identity Design</h3>
@@ -63,13 +63,13 @@
         </div>
 
         <div class="bodybox-works-section">
-            <a href="souldust.html">
+            <a href="souldust">
                 <div id="thumbnail-souldust" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">SOULDUST</p>
                     <h3>Brand Identity Design and Launching of Malaysian Streetwear Brand</h3>
                 </div>
             </a>
-            <a href="ecoworld.html">
+            <a href="ecoworld">
                 <div id="thumbnail-ecoworld" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">ECOWORLD</p>
                     <h3>A Digitally Interactive Financial Report for Land Developer</h3>
@@ -78,13 +78,13 @@
         </div>
 
         <div class="bodybox-works-section">
-            <a href="welovefood.html">
+            <a href="welovefood">
                 <div id="thumbnail-welovefood" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">WELOVE FOOD ENTERPRISE</p>
                     <h3>Brand Identity Design for Malaysian Local Food Vendor</h3>
                 </div>
             </a>
-            <a href="vort3x.html">
+            <a href="vort3x">
                 <div id="thumbnail-vort3x" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">VORT3X</p>
                     <h3>Pioneer Design and Template for Sticker-Mask Angpao</h3>
@@ -93,13 +93,13 @@
         </div>
 
         <div class="bodybox-works-section">
-            <a href="aurigami-mascot.html">
+            <a href="aurigami-mascot">
                 <div id="thumbnail-aurigami-mascot" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">AURIGAMI FINANCE</p>
                     <h3>Aurisprout: A DeFi Mascot (2D Illustrated and 3D Modelled)</h3>
                 </div>
             </a>
-            <a href="zhen.html">
+            <a href="zhen">
                 <div id="thumbnail-house" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">ZHEN HOUSE OF ART</p>
                     <h3>The Story of the House of Art</h3>
