--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
             </a>
             <a href="zhen">
-                <div id="thumbnail-house" class="works-section-card">
+                <div id="thumbnail-zhen" class="works-section-card">
                     <p class="font-size-14 font-color-mauve200 letter-spacing-250">ZHEN HOUSE OF ART</p>
                     <h3>The Story of the House of Art</h3>
                 </div>
