--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Navbar -->
     <div id="navbar-bar">
         <a href="./"><img id="navbar-logo" src="css/img/z.svg"/></a>
-        <a href="./#bodybox-works" class="navbar-item glow-small">Work</a>
+        <a href="#bodybox-works" class="navbar-item glow-small">Work</a>
         <a href="gallery" class="navbar-item glow-small">Gallery</a>
     </div>
 
