--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet"> 
 
+    <link rel="icon" type="image/x-icon" href="css/img/favicon.ico"/>
+    
     <link rel="stylesheet" href="css/styles.css"/>
 
     <script src="js/styles.js"></script>
