--- a/index.html
+++ b/index.html
@@ -3,6 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta property=’og:title’ content='TITLE TEST'/>
+    <meta property=’og:image’ content='css/img/thumbnail/thumbnail-share.png’/>
+    <meta property=’og:description’ content='DESCRIPTION TEST'/>
+    <meta property=’og:url’ content='https://zhenhouseofart.github.io'/>
+    <meta property='og:image:width' content='1200' />
+    <meta property='og:image:height' content='627' />
+    <meta property="og:type" content='website'/>
+    
     <title>ZHEN House of Art</title>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
