--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <meta property="og:title" content="ZHEN House of Art"/>
     <meta property="og:image" content="css/img/thumbnail/thumbnail-share.png"/>
-    <meta property="og:description" content="Welcome to the house of art."/>
+    <meta property="og:description" content="Welcome to the house of art, the portfolio of ZHEN."/>
     <meta property="og:url" content="https://zhenhouseofart.github.io/"/>
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627"/>
