--- a/aurigami-dapp.html
+++ b/aurigami-dapp.html
@@ -41,10 +41,10 @@
             <div>
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
-                    <h4 class="project-details">UI UX</h4>
                     <h4 class="project-details">Creative Director</h4>
+                    <h4 class="project-details">UI UX Designer</h4>
                     <h4 class="project-details">Beta Tester and Advisor</h4>
-                    <h4 class="project-details">Project Managing</h4>
+                    <h4 class="project-details">Project Manager</h4>
                 </div>
             </div>
             <div>
