--- a/souldust.html
+++ b/souldust.html
@@ -43,8 +43,8 @@
                 <div>
                     <h4 class="project-details">Project Manager</h4>
                     <h4 class="project-details">Creative Director</h4>
-                    <h4 class="project-details">Market Analysis and Research</h4>
-                    <h4 class="project-details">Market Strategist</h4>
+                    <h4 class="project-details">Market Analyst and Strategist</h4>
+                    <h4 class="project-details">Research</h4>
                 </div>
             </div>
             <div>
