--- a/welovefood.html
+++ b/welovefood.html
@@ -42,7 +42,7 @@
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
                     <h4 class="project-details">Lead Designer</h4>
-                    <h4 class="project-details">Project Proposal</h4>
+                    <h4 class="project-details">Project Proposer</h4>
                 </div>
             </div>
             <div>
