--- a/vort3x.html
+++ b/vort3x.html
@@ -42,8 +42,8 @@
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
                     <h4 class="project-details">Lead Designer</h4>
+                    <h4 class="project-details">Pioneer Designer</h4>
                     <h4 class="project-details">Research</h4>
-                    <h4 class="project-details">Pioneering Template</h4>
                 </div>
             </div>
             <div>
