--- a/aurigami-mascot.html
+++ b/aurigami-mascot.html
@@ -42,7 +42,7 @@
                 <p class="font-size-14 font-color-mauve200 letter-spacing-250">MY ROLES</p>
                 <div>
                     <h4 class="project-details">Creative Director</h4>
-                    <h4 class="project-details">Marketing Strategy</h4>
+                    <h4 class="project-details">Marketing Strategist</h4>
                     <h4 class="project-details">Project Initiator</h4>
                 </div>
             </div>
