--- a/zhen.html
+++ b/zhen.html
@@ -43,7 +43,7 @@
                 <div>
                     <h4 class="project-details">Product Owner and Manager</h4>
                     <h4 class="project-details">Creative Director</h4>
-                    <h4 class="project-details">Front End Developer</h4>
+                    <h4 class="project-details">Front-End Developer</h4>
                 </div>
             </div>
             <div>
