--- a/aurigami-dapp.html
+++ b/aurigami-dapp.html
@@ -43,8 +43,7 @@
                 <div>
                     <h4 class="project-details">Creative Director</h4>
                     <h4 class="project-details">UI UX Designer</h4>
-                    <h4 class="project-details">Beta Tester and Advisor</h4>
-                    <h4 class="project-details">Project Manager</h4>
+                    <h4 class="project-details">Beta Tester</h4>
                 </div>
             </div>
             <div>
